k3s/deployment.yaml
#
# kubectl apply -k .
#
# See Docker Hub Pages [1].
#
# [1] https://hub.docker.com/r/atlassian/jira-software
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-core
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jira-core
  template:
    metadata:
      labels:
        component: jira-core
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "jira-home"
        persistentVolumeClaim:
          claimName: "jira-home"
      containers:
      - name: jira-core
        # docker run -v
        # jiraVolume:/var/atlassian/application-data/jira
        # --name="jira" -d -p 8080:8080 atlassian/jira-software
        image: atlassian/jira-core:8.5.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/var/atlassian/application-data/jira"
          name: "jira-home"

---
apiVersion: v1
kind: Service
metadata:
  name: jira-core
spec:
  type: ClusterIP
  selector:
    component: jira-core
  ports:
  - port: 80
    targetPort: 8080
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service.
#
#     https://jira.localhost
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira
spec:
  rules:
  - host: jira.localhost
    http:
      paths:
      - backend:
          serviceName: jira-core
          servicePort: 80
